# LLM_Engineer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
week1/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  scraper.py
week6/: day1.ipynb
week6/pricer/: batch.py  items.py  parser.py
